[package]
name = "wasping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
async-process = "1.6.0"
clap = { version = "4.1.11", features = ["derive"] }
ipnet = "2.7.2"
tokio = { version = "1.26.0", features = ["full"] }
tokio-icmp-echo = "0.4.1"
